@@ -569,6 +569,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG3550  (EXPERIMENTAL)
        Canon PIXMA MG3560  (EXPERIMENTAL)
        Canon PIXMA MG3570  (EXPERIMENTAL)
+       Canon PIXMA MG3580  (EXPERIMENTAL)
 
        Canon MG4100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG4110  (EXPERIMENTAL)(*2)
@@ -628,12 +629,15 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG5480  (EXPERIMENTAL)(*2)
 
        Canon MG5500 series (EXPERIMENTAL)
+       Canon PIXMA MG5510  (EXPERIMENTAL)
        Canon PIXMA MG5520  (EXPERIMENTAL)
        Canon PIXMA MG5522  (EXPERIMENTAL)
        Canon PIXUS MG5530  (EXPERIMENTAL)
        Canon PIXMA MG5540  (EXPERIMENTAL)
        Canon PIXMA MG5550  (EXPERIMENTAL)
+       Canon PIXMA MG5560  (EXPERIMENTAL)
        Canon PIXMA MG5570  (EXPERIMENTAL)
+       Canon PIXMA MG5580  (EXPERIMENTAL)
 
        Canon MG6100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG6110  (EXPERIMENTAL)(*2)
@@ -664,6 +668,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG6380  (EXPERIMENTAL)(*2)
 
        Canon MG6400 series (EXPERIMENTAL)
+       Canon PIXMA MG6400  (EXPERIMENTAL)
        Canon PIXMA MG6410  (EXPERIMENTAL)
        Canon PIXMA MG6420  (EXPERIMENTAL)
        Canon PIXMA MG6440  (EXPERIMENTAL)
@@ -680,6 +685,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MG7140  (EXPERIMENTAL)
        Canon PIXMA MG7150  (EXPERIMENTAL)
        Canon PIXMA MG7170  (EXPERIMENTAL)
+       Canon PIXMA MG7180  (EXPERIMENTAL)
 
        Canon MG8100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG8120  (EXPERIMENTAL)(*2)
@@ -934,6 +940,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon MX720 series  (EXPERIMENTAL)
        Canon PIXMA MX721   (EXPERIMENTAL)(*2)
        Canon PIXMA MX722   (EXPERIMENTAL)(*2)
+       Canon PIXMA MX725   (EXPERIMENTAL)(*2)
        Canon PIXMA MX726   (EXPERIMENTAL)(*2)
        Canon PIXMA MX727   (EXPERIMENTAL)(*2)
        Canon PIXMA MX728   (EXPERIMENTAL)(*2)
